<resources>
    <string name="app_name">PlayingWithNotificationsLecture</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="hello_world">Hello World</string>
    <string name="notification">Send Notification</string>
    <string name="personal_notification">Send Personal Notification</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="multi_notification">Send Multi Notification</string>
    <string name="big_text_notification">Send Big Text Notification</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="image">Image</string>
    <string name="big_picture_notification">Send Big Picture Notification</string>
</resources>
