<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.perev.playingwithnotificationslecture.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/notificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/notification"
        android:onClick="btnNotificationOnClick"/>

    <Button
        android:id="@+id/personalNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/notificationButton"
        android:text="@string/personal_notification"
        android:onClick="btnPersonalNotificationOnClick"/>

    <Button
        android:id="@+id/multiNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/personalNotificationButton"
        android:text="@string/multi_notification"
        android:onClick="btnMultiNotificationOnClick"/>

    <Button
        android:id="@+id/bigTextNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/multiNotificationButton"
        android:text="@string/big_text_notification"
        android:onClick="btnBigTextNotificationOnClick"/>

    <Button
        android:id="@+id/bigPictureNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/bigTextNotificationButton"
        android:text="@string/big_picture_notification"
        android:onClick="btnBigPictureNotificationOnClick"/>

</RelativeLayout>
